# archivemind

./: .gitignore  CLAUDE.md  archivemind-mockup.html  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  seed.sql
backend/migrations/: 001_create_users.sql  002_create_workspaces.sql  003_create_notes.sql  004_create_field_trips.sql  005_create_note_field_trips.sql  006_create_entities.sql  007_create_note_entities.sql  008_create_concepts.sql  009_create_note_concepts.sql  010_create_tags.sql  011_create_note_tags.sql  012_create_media.sql  013_create_inventory.sql  014_create_routines.sql  015_create_graph_edges.sql  016_create_stars.sql  017_create_sync_log.sql  018_add_field_trip_id_to_routines.sql  019_add_category_notes_to_inventory.sql  020_add_icon_to_routines.sql  021_create_plans_and_usage.sql  022_rename_stripe_to_lemonsqueezy.sql  023_platform_budget_and_grace.sql  024_ai_conversations.sql
backend/src/: config.rs  error.rs  main.rs  response.rs  seed.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/middleware/: correlation_id.rs  mod.rs  plan_guard.rs
backend/src/models/: ai.rs  budget.rs  concept.rs  entity.rs  field_trip.rs  graph.rs  inventory.rs  map.rs  media.rs  mod.rs  note.rs  plan.rs  routine.rs  tag.rs  user.rs
backend/src/routes/: ai.rs  billing.rs  concepts.rs  entities.rs  field_trips.rs  graph.rs  health.rs  inventory.rs  map.rs  media.rs  mod.rs  notes.rs  routines.rs  search.rs  settings.rs  tags.rs  usage.rs  users.rs
docs/: builder-agent.md  database-setup.md  deployment.md  design-system.md  tech-stack.md
frontend/: index.html  (+6 more)
(+91 files in other folders)
